<resources>
    <string name="app_name">Smart Campus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="emptyString"> </string>
    <string name="gcm_sender_id">339115249396</string>
    <string name="fontRoboto">fonts/Roboto-Light.ttf</string>
    <string name="futureText">Future notifications and other updates will be shown here</string>
    <string name="launch_hinttext">Select a category to proceed</string>
    <string name="resendEmailText">Click above image to resend confirmation email</string>
    <string name="profileImageHintText">Click below image to update profile photo</string>
    <string name="updateUserName">Update username</string>
    <string name="pleaseWaitText">Please wait loading&#8230;</string>
    <string name="noData">Well you are done! No more to display</string>
    <string name="emptyListText">No data to display</string>
    <string name="emptyMessages">No messages received/sent yet</string>
    <string name="noComments">No comments yet</string>
    <string name="fetching">Fetching...</string>
    <string name="noContacts">No contacts to display</string>
    <string name="searchContact">Type faculty name to search</string>
    <string name="groupName">Name of the group</string>
    <string name="create">Create</string>
    <string name="searchProgress">Search in progress&#8230;</string>
    <string name="searchBy">Search by</string>
    <string name="incorrectPassword">Incorrect password</string>
    <string name="requiredData">Enter required data</string>
    <string name="noAccount">No account found! Verify college id</string>
    <string name="postDescriptionHint">Description</string>
    <string name="newPostHint">Whats on your mind?</string>
    <string name="newLinkName">Type a link here for appearing it on the wall</string>
    <string name="newLinkHint">ex: http://www.svecw.edu.in</string>
    <string name="postKnowledgeDescriptionHint">Description is mandatory</string>
    <string name="post">Post</string>
    <string name="verifying">Verifying..</string>
    <string name="posting">Posting..</string>
    <string name="postTitle">Title</string>
    <string name="newPost">New post</string>
    <string name="link">Paste a link (ex: http://www.google.com/)</string>
    <string name="menuNewPost">Create post</string>
    <string name="menuCancelPost">Cancel post</string>
    <string name="offline">Offline</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="newMessage">New Message</string>
    <string name="newTextMessage">New Text Message</string>
    <string name="write_message">Write message</string>
    <string name="write_something">Write your complaint or feedback</string>
    <string name="goButton">Go</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="next">Next > </string>
    <string name="finish">Finish</string>
    <string name="loginButton">Login</string>
    <string name="loginWaringText">Only Faculty/Student of SVECW can login!</string>
    <string name="updatephoneandemail">Update your phone and email</string>
    <string name="selectUserAdmin">Select user</string>
    <string name="searchStudent">Search student</string>
    <string name="selectAction">Select an action to proceed</string>
    <string name="selectUser">Select a user to assign</string>
    <string name="selectUserMessage">Select user to send message</string>
    <string name="selectPrivilege">Select a privilege</string>
    <string name="messagePrivilege">Send Messages</string>
    <string name="specificMessagePrivilege">Send Specific Messages</string>
    <string name="assignPrivilege">Assign/Update privilege</string>
    <string name="updateStudentBranch">Update student branch</string>
    <string name="typeUsername">Type username</string>
    <string name="yourEmail">Your email</string>
    <string name="yourPhone">Your phone</string>
    <string name="hintModeratePrivilege">Moderate student wall posts and messages sent from faculty to students</string>
    <string name="pendingVerification">We have sent a confirmation link to your email. Confirm your account with SVECW by clicking on that link</string>
    <string name="emailId">Email id</string>
    <string name="testEmailId">Email id - example@email.com</string>
    <string name="password">Password</string>
    <string name="phoneOptional">Phone number (optional)</string>
    <string name="emailOptional">Email (optional)</string>
    <string name="phoneNumber">Phone number</string>
    <string name="secureCode">Secret code</string>
    <string name="secretCode">Secret code</string>
    <string name="guest">Guest</string>
    <string name="moreAboutCollege">More about college</string>
    <string name="admin">Admin</string>
    <string name="moderator">Moderator</string>
    <string name="company">Company</string>
    <string name="count">Selections</string>
    <string name="student">Student</string>
    <string name="student_new">Student corner</string>
    <string name="alumni_new">Alumni corner</string>
    <string name="appVersionCheck">Kindly delete the app and install it from PlayStore for using it. Do not share the app using other third party sharing apps</string>
    <string name="knowledge_new">Explore</string>
    <string name="college">College</string>
    <string name="college_new">Happening @ college</string>
    <string name="faculty">Faculty</string>
    <string name="profile">Profile</string>
    <string name="myProfile">My Profile</string>
    <string name="notify">Tap here to receive notifications</string>
    <string name="notify_1">Please wait a moment! we are collecting data from your phone to send notifications</string>
    <string name="notify_2">Congrats! now you can receive notifications</string>
    <string name="profileDetails">View/Update profile</string>
    <string name="adminPanel">Admin panel</string>
    <string name="learn">Learn</string>
    <string name="academics">Academics</string>
    <string name="newAcademicsPost">New Academics Post</string>
    <string name="notifications">Notifications</string>
    <string name="knowledgeWall">Knowledge wall</string>
    <string name="knowledge">Knowledge</string>
    <string name="globalInfo">Global Info</string>
    <string name="globalWall">Global Wall</string>
    <string name="collegeWall">College Wall</string>
    <string name="studentWall">Student Wall</string>
    <string name="alumniWall">Alumni Wall</string>
    <string name="alumni">Alumni</string>
    <string name="collegeInfo">College Info</string>
    <string name="collegeMap">College Map</string>
    <string name="aboutUs">About Us</string>
    <string name="management">Management</string>
    <string name="courses">Courses</string>
    <string name="Placements">Placements</string>
    <string name="recruitmentDetails">Recruitment Details</string>
    <string name="welcome">Welcome</string>
    <string name="collegeText">Shri Vishnu Engineering College for Women \n(Autonomous)</string>
    <string name="initiatives">Initiatives &amp; Achievements</string>
    <string name="achievements">Achievements</string>
    <string name="highlights">Highlights</string>
    <string name="contactUs">Contact us</string>
    <string name="gallery">Gallery</string>
    <string name="aboutApp">About App</string>
    <string name="saveToGallery">Save to gallery</string>
    <string name="highResText">No high resolution image available!</string>
    <string name="aboutCollege">About College</string>
    <string name="aboutCollegeText">Details about college</string>
    <string name="like">Like</string>
    <string name="likes">likes</string>
    <string name="dislike">Dislike</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="writeAComment">Write a comment&#8230;</string>
    <string name="writeAMessage">Write a message&#8230;</string>
    <string name="messageLimit">Enter not more than 160 characters..</string>
    <string name="more">More</string>
    <string name="messages">Messages</string>
    <string name="inbox">Inbox</string>
    <string name="groups">Groups</string>
    <string name="feeling_1">\0x1F601 Smile</string>
    <string name="linkTitle">Link title</string>
    <string name="linkDescription">Link description</string>
    <string name="goKarting">Vishnu Karting</string>
    <string name="hods">HOD</string>
    <string name="vemcFac">VEMC-16 - Faculty</string>
    <string name="vemcStu">VEMC-16 - Student</string>
    <string name="groupMessages">Group messages</string>
    <string name="groupDetails">Important groups of college</string>
    <string name="groupMessagesDetails">Group messages - Details</string>
    <string name="complaint">Complaint</string>
    <string name="Feedback">Feedback</string>
    <string name="assignment">Assignments</string>
    <string name="grievances">Grievances</string>
    <string name="complaintOrFeedback">Complaints</string>
    <string name="bugReport">Bug report/Suggestions</string>
    <string name="hashSymbol">\#</string>
    <string name="exams">Exams</string>
    <string name="examResult">Exam Result</string>
    <string name="proceed">Proceed</string>
    <string name="dean">Dean</string>
    <string name="ragging">Anti-Ragging</string>
    <string name="counselors">Counselors</string>
    <string name="placementCoordinators">Placement Coordinators</string>
    <string name="ecapCoordinators">ECAP Coordinators</string>
    <string name="classRepresentatives">CRs</string>
    <string name="hostelRepresentatives">HRs</string>
    <string name="studentClub">Student Clubs</string>
    <string name="attachFile">Attach file</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="idselected">collegeId</string>
    <string name="nameselected">username</string>
    <string name="id">College id</string>
    <string name="regd_no">Regd.No</string>
    <string name="enterUserName">Enter student name and search</string>
    <string name="enterId">Enter id or name</string>
    <string name="selectBranch">Select Branch</string>
    <string name="selectDepartment"> + Add</string>
    <string name="selectCategory">Select Category</string>
    <string name="selectType">Select Type</string>
    <string name="selectModule">Select Module</string>
    <string name="selectYear">Select Year</string>
    <string name="selectSemester">Select Semester</string>
    <string name="refresh">Refresh</string>
    <string name="fetchUpdatedPrivileges">Fetch my updated privileges</string>
    <string name="fetchUpdatedPrivilegesNote">*Click here to update privileges to your profile</string>
    <string name="timeTableView">Time Table</string>
    <string name="syllabusView">Syllabus</string>
    <string name="classNotesView">Class Notes</string>
    <string name="placements">Placements</string>
    <string name="recruiters">Recruiters list</string>
    <string name="driveTitle">Drive</string>
    <string name="upload">Upload</string>
    <string name="uploadPercentage">0%</string>
    <string name="uploadText">Select file to upload</string>
    <string name="appInfo">
        We digitize your campus and put all your campus information at fingertips. Smart Campus App makes implementing new initiatives in your campus easy and enables collection of real time insights efficient. \n\n Provide your students with the most advanced tools to connect with campus through digital and social boards, organization directories, tutorials, online exams and class schedules. We make complete student to student and student to management experience more meaningful on the go.
    </string>
    <string name="appVersion">App Version : 5.0</string>
</resources>