<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/knowledge_new" />
    <item
        android:id="@+id/nav_college"
        android:enabled="true"
        android:icon="@drawable/ic_college_wall"
        android:title="@string/college"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_student"
        android:enabled="true"
        android:icon="@drawable/ic_student_wall"
        android:title="@string/student"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_alumni"
        android:enabled="true"
        android:icon="@drawable/ic_alumni_wall"
        android:title="@string/alumni"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_more"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/more"
        app:showAsAction="ifRoom" />
</menu>