<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:elevation="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar_actionbar"
            >
        </include>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottomNavigationGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:itemBackground="@color/globalThemeColor"
                app:itemIconTint="@drawable/nav_selection_state"
                app:itemTextColor="@drawable/nav_selection_state"
                app:menu="@menu/home_bottom_navigation"
                app:rippleColor="@color/white"/>
            <!--&lt;!&ndash; Bottom Navigation &ndash;&gt;
            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottomNavigationGlobal"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                design:itemTextColor="@color/globalThemeColor"
                design:itemIconTint="@color/globalThemeColor"
                app:menu="@menu/home_bottom_navigation"
                android:layout_width="match_parent"/>
-->
            <!-- Content Container -->
            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerGlobal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottomNavigationGlobal">

            </android.support.v4.view.ViewPager>

            <RelativeLayout
                android:id="@+id/bgLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:alpha="0.8"
                android:visibility="gone">

            </RelativeLayout>

            <!-- ALumni -->
            <RelativeLayout
                android:id="@+id/alumniLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottomNavigationGlobal"
                android:visibility="gone">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/alumni"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    app:backgroundTint="@color/globalThemeColor"
                    android:layout_margin="24dp"
                    android:src="@drawable/ic_alumni_wall"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alumni"
                    android:textColor="@color/black"
                    android:layout_toLeftOf="@+id/alumni"
                    android:layout_toStartOf="@+id/alumni"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="38dp"/>

            </RelativeLayout>

            <!-- Student -->
            <RelativeLayout
                android:id="@+id/studentLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottomNavigationGlobal"
                android:visibility="gone">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/student"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    app:backgroundTint="@color/globalThemeColor"
                    android:layout_margin="24dp"
                    android:src="@drawable/ic_student_wall"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student"
                    android:textColor="@color/black"
                    android:layout_toLeftOf="@+id/student"
                    android:layout_toStartOf="@+id/student"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="38dp"/>

            </RelativeLayout>

            <!-- College -->
            <RelativeLayout
                android:id="@+id/collegeLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottomNavigationGlobal"
                android:visibility="gone">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/college"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    app:backgroundTint="@color/globalThemeColor"
                    android:layout_margin="24dp"
                    android:src="@drawable/ic_college_wall"
                    app:rippleColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/college"
                    android:textColor="@color/black"
                    android:layout_toLeftOf="@+id/college"
                    android:layout_toStartOf="@+id/college"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="38dp"/>

            </RelativeLayout>

            <!-- Knowledge -->
            <RelativeLayout
                android:id="@+id/knowledgeLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottomNavigationGlobal"
                android:visibility="gone">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/knowledge"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    app:backgroundTint="@color/globalThemeColor"
                    android:layout_margin="24dp"
                    android:src="@drawable/ic_explore"
                    app:rippleColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/knowledge"
                    android:textColor="@color/black"
                    android:layout_toLeftOf="@+id/knowledge"
                    android:layout_toStartOf="@+id/knowledge"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="38dp"/>

            </RelativeLayout>


            <!-- Create -->
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/create"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentRight="true"
                app:backgroundTint="@color/globalThemeColor"
                android:layout_margin="24dp"
                android:src="@drawable/ic_create_post"
                android:layout_above="@+id/bottomNavigationGlobal"
                app:rippleColor="@color/white"/>
            
        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>

